fix responsive design issue on mobile

--- a/src/app/modules/users/components/user-list/user-list.component.scss
+++ b/src/app/modules/users/components/user-list/user-list.component.scss
@@ -2,5 +2,4 @@
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin: 10px;
 }
